--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,9 +64,9 @@ bind C-p paste-buffer
 
 # window splitting
 unbind %
-bind | split-window -h
+bind l split-window -h
 unbind '"'
-bind - split-window -v
+bind j split-window -v
 
 # resize panes
 bind -r H resize-pane -L 5
@@ -82,29 +82,48 @@ bind ^J select-pane -t :.+
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# default statusbar colors
-set-option -g status-bg colour253
-set-option -g status-fg colour239
-set-option -g status-attr default
+# # default statusbar colors
+# set-option -g status-bg colour253
+# set-option -g status-fg colour246
+# set-option -g status-attr default
 
-# default window title colors
-set-window-option -g window-status-fg colour240
-set-window-option -g window-status-bg colour253
+# # default window title colors
+# set-window-option -g window-status-fg colour237
+# set-window-option -g window-status-bg colour250
 
-# active window title colors
-set-window-option -g window-status-current-fg colour233
-set-window-option -g window-status-current-bg colour250
+# # active window title colors
+# set-window-option -g window-status-current-fg colour236
+# set-window-option -g window-status-current-bg colour250
 
-# pane border
-set-option -g pane-border-fg default
-set-option -g pane-active-border-fg default
+# # pane border
+# set-option -g pane-border-fg default
+# set-option -g pane-active-border-fg default
 
-# message text
-set-option -g message-bg default
-set-option -g message-fg default
+# # message text
+# set-option -g message-bg default
+# set-option -g message-fg default
 
-# pane number display
-set-option -g display-panes-active-colour default
-set-option -g display-panes-colour default
+# # pane number display
+# set-option -g display-panes-active-colour default
+# set-option -g display-panes-colour default
 
 run-shell ~/tmux/resurrect.tmux
+
+set -g status-bg colour235
+set -g window-status-activity-attr bold
+
+set -g status-left-length 32
+set -g status-right-length 150
+set -g status-interval 5
+
+set -g status-left " "
+set -g status-right "😂 #S"
+set -g window-status-format "#[fg=colour243,bg=colour236] #I "
+set -g window-status-current-format "#[fg=colour249,bg=colour238,noreverse,bold] #I "
+
+# Activity
+setw -g monitor-activity on
+set -g visual-activity off
+
+# Autorename sanely.
+setw -g automatic-rename on
