--- a/.tmux.conf
+++ b/.tmux.conf
@@ -109,21 +109,39 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 run-shell ~/tmux/resurrect.tmux
 
-set -g status-bg colour235
-set -g window-status-activity-attr bold
-
-set -g status-left-length 32
-set -g status-right-length 150
-set -g status-interval 5
-
-set -g status-left " "
-set -g status-right "😂 #S"
-set -g window-status-format "#[fg=colour243,bg=colour236] #I "
-set -g window-status-current-format "#[fg=colour249,bg=colour238,noreverse,bold] #I "
-
 # Activity
 setw -g monitor-activity on
 set -g visual-activity off
 
 # Autorename sanely.
 setw -g automatic-rename on
+
+# default statusbar colors
+set-option -g status-bg white #base2
+set-option -g status-fg yellow #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg brightyellow #base00
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg brightred #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg white #base2
+set-option -g pane-active-border-fg brightcyan #base1
+
+# message text
+set-option -g message-bg white #base2
+set-option -g message-fg brightred #orange
+
+# pane number display
+set-option -g display-panes-active-colour blue #blue
+set-option -g display-panes-colour brightred #orange
+
+# clock
+set-window-option -g clock-mode-colour green #green
