--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,18 +11,14 @@ set -g history-limit 50000
 # use vim key bindings
 setw -g mode-keys vi
 
-set-option -g mouse-select-pane off
-set-option -g mouse-select-window off
-set -g mouse-utf8 off
+# Enable mouse
+set -g mouse off
 
 # Sane scrolling
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
-# disable mouse
-setw -g mode-mouse off
-
 # decrease command delay (increases vim responsiveness)
-set -sg escape-time 1
+set -sg escape-time 2
 
 # increase repeat time for repeatable commands
 set -g repeat-time 1000
@@ -66,7 +62,7 @@ bind C-p paste-buffer
 unbind %
 bind l split-window -h
 unbind '"'
-bind j split-window -v
+bind j split-window -v -c "#{pane_current_path}"
 
 # resize panes
 bind -r H resize-pane -L 5
@@ -82,31 +78,6 @@ bind ^J select-pane -t :.+
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# # default statusbar colors
-# set-option -g status-bg colour253
-# set-option -g status-fg colour246
-# set-option -g status-attr default
-
-# # default window title colors
-# set-window-option -g window-status-fg colour237
-# set-window-option -g window-status-bg colour250
-
-# # active window title colors
-# set-window-option -g window-status-current-fg colour236
-# set-window-option -g window-status-current-bg colour250
-
-# # pane border
-# set-option -g pane-border-fg default
-# set-option -g pane-active-border-fg default
-
-# # message text
-# set-option -g message-bg default
-# set-option -g message-fg default
-
-# # pane number display
-# set-option -g display-panes-active-colour default
-# set-option -g display-panes-colour default
-
 run-shell ~/tmux/resurrect.tmux
 
 # Activity
@@ -117,31 +88,43 @@ set -g visual-activity off
 setw -g automatic-rename on
 
 # default statusbar colors
-set-option -g status-bg white #base2
-set-option -g status-fg yellow #yellow
+
+set-option -g status-fg colour250
+set-option -g status-bg colour234
 set-option -g status-attr default
 
+# default left statusbar colors
+set-option -g status-left-fg colour250
+set-option -g status-left-bg default
+set-option -g status-left-attr default
+
+# default right statusbar colors
+set-option -g status-right-fg colour240
+set-option -g status-right-bg default
+set-option -g status-right-attr default
+
 # default window title colors
-set-window-option -g window-status-fg brightyellow #base00
+set-window-option -g window-status-fg colour240
 set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg brightred #orange
+set-window-option -g window-status-current-fg colour252
 set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-attr default
 
 # pane border
-set-option -g pane-border-fg white #base2
-set-option -g pane-active-border-fg brightcyan #base1
+set-option -g pane-border-fg colour235
+set-option -g pane-active-border-fg colour235
 
 # message text
-set-option -g message-bg white #base2
-set-option -g message-fg brightred #orange
+set-option -g message-fg colour232
+set-option -g message-bg colour32
 
 # pane number display
-set-option -g display-panes-active-colour blue #blue
-set-option -g display-panes-colour brightred #orange
+# set-option -g display-panes-active-colour colour32
+# set-option -g display-panes-colour colour166
 
-# clock
-set-window-option -g clock-mode-colour green #green
+set-option -g mode-fg colour232
+set-option -g mode-bg colour32
+
+set -g status-right '#H | %a %m-%d %H:%M'
