--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,10 +29,6 @@ set -g base-index 1
 # start pane index at 1
 setw -g pane-base-index 1
 
-# highlight window when it has new activity
-setw -g monitor-activity on
-set -g visual-activity on
-
 # re-number windows when one is closed
 set -g renumber-windows on
 
@@ -47,12 +43,10 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 unbind C-b
 set -g prefix C-j
 
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+unbind-key -T copy-mode-vi Enter
 
 # create 'v' alias for selecting text
-bind-key -t vi-copy v begin-selection
+bind-key -T copy-mode-vi v send-keys -X begin-selection
 
 # paste
 unbind C-p
@@ -84,47 +78,33 @@ run-shell ~/tmux/resurrect.tmux
 setw -g monitor-activity on
 set -g visual-activity off
 
-# Autorename sanely.
+# Autorename sanely
 setw -g automatic-rename on
 
-# default statusbar colors
+# Status Bar
 
-set-option -g status-fg colour250
-set-option -g status-bg colour234
+# set refresh interval for status bar
+set -g status-interval 30
+
+set-option -g status-fg white
+set-option -g status-bg default
 set-option -g status-attr default
 
-# default left statusbar colors
-set-option -g status-left-fg colour250
-set-option -g status-left-bg default
-set-option -g status-left-attr default
-
-# default right statusbar colors
-set-option -g status-right-fg colour240
-set-option -g status-right-bg default
-set-option -g status-right-attr default
-
-# default window title colors
-set-window-option -g window-status-fg colour240
+set-window-option -g window-status-fg "#666666"
 set-window-option -g window-status-bg default
-
-# active window title colors
-set-window-option -g window-status-current-fg colour252
+set-window-option -g window-status-attr default
+set-window-option -g window-status-current-fg red
 set-window-option -g window-status-current-bg default
 set-window-option -g window-status-current-attr default
 
-# pane border
-set-option -g pane-border-fg colour235
-set-option -g pane-active-border-fg colour235
+set-option -g message-fg white
+set-option -g message-bg black
+set-option -g message-attr bright
 
-# message text
-set-option -g message-fg colour232
-set-option -g message-bg colour32
+set -g status-left " "
+set -g status-justify left
 
-# pane number display
-# set-option -g display-panes-active-colour colour32
-# set-option -g display-panes-colour colour166
+setw -g window-status-format         ' #(echo "#{pane_current_command}") '
+setw -g window-status-current-format ' #(echo "#{pane_current_command}") '
 
-set-option -g mode-fg colour232
-set-option -g mode-bg colour32
-
-set -g status-right '#H | %a %m-%d %H:%M'
+set -g status-right " "
