--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,12 +16,13 @@ set -g mouse off
 
 # Sane scrolling
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # decrease command delay (increases vim responsiveness)
 set -sg escape-time 2
 
 # increase repeat time for repeatable commands
-set -g repeat-time 1000
+set -g repeat-time 600
 
 # start window index at 1
 set -g base-index 1
@@ -76,7 +77,7 @@ run-shell ~/tmux/resurrect.tmux
 
 # Activity
 setw -g monitor-activity on
-set -g visual-activity off
+set -g visual-activity on
 
 # Autorename sanely
 setw -g automatic-rename on
@@ -86,20 +87,23 @@ setw -g automatic-rename on
 # set refresh interval for status bar
 set -g status-interval 30
 
-set-option -g status-fg white
-set-option -g status-bg default
+set-option -g status-fg black
+set-option -g status-bg colour0
 set-option -g status-attr default
 
-set-window-option -g window-status-fg "#666666"
-set-window-option -g window-status-bg default
+set-window-option -g window-status-fg colour8
+set-window-option -g window-status-bg colour0
 set-window-option -g window-status-attr default
-set-window-option -g window-status-current-fg red
-set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-bg colour3
 set-window-option -g window-status-current-attr default
 
 set-option -g message-fg white
 set-option -g message-bg black
 set-option -g message-attr bright
+
+set-window-option -g window-status-activity-fg colour0
+set-window-option -g window-status-activity-bg colour1
 
 set -g status-left " "
 set -g status-justify left
@@ -107,4 +111,4 @@ set -g status-justify left
 setw -g window-status-format         ' #(echo "#{pane_current_command}") '
 setw -g window-status-current-format ' #(echo "#{pane_current_command}") '
 
-set -g status-right " "
+set -g status-right '%b %d, %H:%M'
