--- a/.tmux.conf
+++ b/.tmux.conf
@@ -88,21 +88,21 @@ setw -g automatic-rename on
 set -g status-interval 30
 
 set-option -g status-fg black
-set-option -g status-bg colour0
+set-option -g status-bg colour15
 set-option -g status-attr default
 
 set-window-option -g window-status-fg colour8
-set-window-option -g window-status-bg colour0
+set-window-option -g window-status-bg colour15
 set-window-option -g window-status-attr default
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg colour3
+set-window-option -g window-status-current-fg white
+set-window-option -g window-status-current-bg colour4
 set-window-option -g window-status-current-attr default
 
 set-option -g message-fg white
 set-option -g message-bg black
 set-option -g message-attr bright
 
-set-window-option -g window-status-activity-fg colour0
+set-window-option -g window-status-activity-fg colour15
 set-window-option -g window-status-activity-bg colour1
 
 set -g status-left " "
