--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,7 @@ set -g history-limit 50000
 
 # use vim key bindings
 setw -g mode-keys vi
+setw -g status-keys vi
 
 # Enable mouse
 set -g mouse off
@@ -36,7 +37,7 @@ set -g renumber-windows on
 # enable pbcopy and pbpaste
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
-###########################
+##########################
 #  Key Bindings
 ###########################
 
@@ -48,6 +49,8 @@ unbind-key -T copy-mode-vi Enter
 
 # create 'v' alias for selecting text
 bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 # paste
 unbind C-p
@@ -60,14 +63,24 @@ unbind '"'
 bind j split-window -v -c "#{pane_current_path}"
 
 # resize panes
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+bind -r H resize-pane -L 20
+bind -r J resize-pane -D 20
+bind -r K resize-pane -U 20
+bind -r L resize-pane -R 20
 
 # quickly switch panes
 unbind ^J
 bind ^J select-pane -t :.+
+
+# switch between panes using ctrl
+bind -n C-Left select-pane -L
+bind -n C-Right select-pane -R
+bind -n C-Up select-pane -U
+bind -n C-Down select-pane -D
+
+# switch between windows using shift
+bind -n S-Left previous-window
+bind -n s-Right next-window
 
 # force a reload of the config file
 unbind r
@@ -88,27 +101,20 @@ setw -g automatic-rename on
 set -g status-interval 30
 
 set-option -g status-fg black
-set-option -g status-bg colour15
+set-option -g status-bg colour235
 set-option -g status-attr default
-
-set-window-option -g window-status-fg colour8
-set-window-option -g window-status-bg colour15
-set-window-option -g window-status-attr default
-set-window-option -g window-status-current-fg white
-set-window-option -g window-status-current-bg colour4
-set-window-option -g window-status-current-attr default
-
-set-option -g message-fg white
-set-option -g message-bg black
-set-option -g message-attr bright
-
-set-window-option -g window-status-activity-fg colour15
-set-window-option -g window-status-activity-bg colour1
 
 set -g status-left " "
 set -g status-justify left
 
-setw -g window-status-format         ' #(echo "#{pane_current_command}") '
-setw -g window-status-current-format ' #(echo "#{pane_current_command}") '
+setw -g window-status-format " #F#I:#W#F "
+setw -g window-status-current-format " #F#I:#W#F "
+setw -g window-status-format "#[fg=colour245]#[bg=colour236] #I #[bg=colour235]#[fg=colour245] #W "
+setw -g window-status-current-format "#[bg=colour31]#[fg=colour255] . #[fg=colour255]#[bg=colour239] #W "
+setw -g window-status-activity-style 'bg=colour255'
 
-set -g status-right '%b %d, %H:%M'
+set -g status-right '#[fg=colour245,bg=colour235,bold] %a, %b %d #[fg=colour245,bg=colour235,bold]- %I:%M %p '
+set -g status-right-length 50
+set -g status-left-length 20
+
+set-option -g status-position bottom
