--- a/.tmux.conf
+++ b/.tmux.conf
@@ -100,21 +100,20 @@ setw -g automatic-rename on
 # set refresh interval for status bar
 set -g status-interval 30
 
-set-option -g status-fg black
-set-option -g status-bg colour235
-set-option -g status-attr default
-
 set -g status-left " "
 set -g status-justify left
 
 setw -g window-status-format " #F#I:#W#F "
 setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=colour245]#[bg=colour236] #I #[bg=colour235]#[fg=colour245] #W "
-setw -g window-status-current-format "#[bg=colour31]#[fg=colour255] . #[fg=colour255]#[bg=colour239] #W "
-setw -g window-status-activity-style 'bg=colour255'
 
-set -g status-right '#[fg=colour245,bg=colour235,bold] %a, %b %d #[fg=colour245,bg=colour235,bold]- %I:%M %p '
-set -g status-right-length 50
-set -g status-left-length 20
+#########
+#  TPM  #
+#########
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'arcticicestudio/nord-tmux'
 
-set-option -g status-position bottom
+set -g @nord_tmux_no_patched_font "1"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
