--- a/.tmux.conf
+++ b/.tmux.conf
@@ -111,9 +111,9 @@ setw -g window-status-current-format " #F#I:#W#F "
 #########
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @plugin 'seebi/tmux-colors-solarized'
 
-set -g @nord_tmux_no_patched_font "1"
+set -g @colors-solarized 'light'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
