--- a/.tmux.conf
+++ b/.tmux.conf
@@ -106,14 +106,38 @@ set -g status-justify left
 setw -g window-status-format " #F#I:#W#F "
 setw -g window-status-current-format " #F#I:#W#F "
 
+set-option -g status-bg colour0
+set-option -g status-fg colour6
+set-option -g status-attr default
+
+set-window-option -g window-status-fg colour13
+set-window-option -g window-status-bg default
+
+set-window-option -g window-status-current-fg colour3
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-attr bright
+
+set-option -g pane-border-fg black
+set-option -g pane-active-border-fg colour14
+
+set-option -g message-bg black
+set-option -g message-fg colour13
+
+set-option -g display-panes-active-colour default
+set-option -g display-panes-colour colour9
+
+set-window-option -g clock-mode-colour colour2
+set-window-option -g window-status-bell-style fg=colour0,bg=colour1
+
+set -g status-right '#{battery_percentage} | %a %h %d %H:%M IST'
+
 #########
 #  TPM  #
 #########
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'seebi/tmux-colors-solarized'
-
-set -g @colors-solarized 'light'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
