--- a/.tmux.conf
+++ b/.tmux.conf
@@ -106,21 +106,21 @@ set -g status-justify left
 setw -g window-status-format " #F#I:#W#F "
 setw -g window-status-current-format " #F#I:#W#F "
 
-set-option -g status-bg colour0
+set-option -g status-bg colour7
 set-option -g status-fg colour6
 set-option -g status-attr default
 
-set-window-option -g window-status-fg colour13
+set-window-option -g window-status-fg colour0
 set-window-option -g window-status-bg default
 
-set-window-option -g window-status-current-fg colour3
-set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-fg colour15
+set-window-option -g window-status-current-bg colour0
 set-window-option -g window-status-current-attr bright
 
 set-option -g pane-border-fg black
 set-option -g pane-active-border-fg colour14
 
-set-option -g message-bg black
+set-option -g message-bg colour15
 set-option -g message-fg colour13
 
 set-option -g display-panes-active-colour default
