--- a/.tmux.conf
+++ b/.tmux.conf
@@ -96,47 +96,25 @@ set -g visual-activity on
 setw -g automatic-rename on
 
 # Status Bar
-
-# set refresh interval for status bar
 set -g status-interval 30
+set -g visual-activity off
 
-set -g status-left " "
-set -g status-justify left
+set-option -g status "on"
 
-setw -g window-status-format " #F#I:#W#F "
-setw -g window-status-current-format " #F#I:#W#F "
+set-option -g status-justify left
+set-option -g status-left '#[bg=colour252] #[bg=colour255] '
+set-option -g status-bg colour253
+set-option -g status-right '#[bg=colour255] #[bg=colour252]#[fg=colour15] #(date "+%a %b %d %H:%M") #[bg=colour252] #[bg=colour252] #[bg=colour252] '
+set-option -g status-interval 60
 
-set-option -g status-bg colour7
-set-option -g status-fg colour6
-set-option -g status-attr default
+set-window-option -g window-status-format '#[bg=colour255]#[fg=colour245] #I #[bg=colour252]#[fg=colour236] #[bg=colour252]#W#[bg=colour252]#[fg=colour195]#F#[bg=colour252] '
+set-window-option -g window-status-current-format '#[bg=colour125]#[fg=colour255] #I #[bg=colour125]#[fg=colour255] #[bg=colour125]#W#[bg=colour125]#[fg=colour255]#F#[bg=colour125] '
 
-set-window-option -g window-status-fg colour0
-set-window-option -g window-status-bg default
-
-set-window-option -g window-status-current-fg colour15
-set-window-option -g window-status-current-bg colour0
-set-window-option -g window-status-current-attr bright
-
-set-option -g pane-border-fg black
-set-option -g pane-active-border-fg colour14
-
-set-option -g message-bg colour15
-set-option -g message-fg colour13
-
-set-option -g display-panes-active-colour default
-set-option -g display-panes-colour colour9
-
-set-window-option -g clock-mode-colour colour2
-set-window-option -g window-status-bell-style fg=colour0,bg=colour1
-
-set -g status-right '#{battery_percentage} | %a %h %d %H:%M IST'
-
-#########
+########
 #  TPM  #
 #########
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
