--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@
 ###########################
 
 # use 256 term for pretty colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # increase scroll-back history
 set -g history-limit 50000
@@ -17,7 +17,9 @@ set -g mouse off
 
 # Sane scrolling
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-set -ga terminal-overrides ",xterm-256color:Tc"
+
+# This will make sure neovim cursor changes inside insert mode.
+set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 # decrease command delay (increases vim responsiveness)
 set -sg escape-time 2
@@ -96,19 +98,61 @@ set -g visual-activity on
 setw -g automatic-rename on
 
 # Status Bar
-set -g status-interval 30
-set -g visual-activity off
+set -g status-bg default
+setw -g window-status-current-bg "#282a2e"
+setw -g window-status-current-fg "#81a2be"
 
-set-option -g status "on"
+## highlight active window
+setw -g window-style 'bg=#282a2e'
+setw -g window-active-style 'bg=#1d1f21'
+setw -g pane-active-border-style ''
 
-set-option -g status-justify left
-set-option -g status-left '#[bg=colour252] #[bg=colour255] '
-set-option -g status-bg colour253
-set-option -g status-right '#[bg=colour255] #[bg=colour252]#[fg=colour15] #(date "+%a %b %d %H:%M") #[bg=colour252] #[bg=colour252] #[bg=colour252] '
-set-option -g status-interval 60
+## highlight activity in status bar
+setw -g window-status-activity-fg "#8abeb7"
+setw -g window-status-activity-bg "#1d1f21"
 
-set-window-option -g window-status-format '#[bg=colour255]#[fg=colour245] #I #[bg=colour252]#[fg=colour236] #[bg=colour252]#W#[bg=colour252]#[fg=colour195]#F#[bg=colour252] '
-set-window-option -g window-status-current-format '#[bg=colour125]#[fg=colour255] #I #[bg=colour125]#[fg=colour255] #[bg=colour125]#W#[bg=colour125]#[fg=colour255]#F#[bg=colour125] '
+## pane border and colors
+set -g pane-active-border-bg default
+set -g pane-active-border-fg "#373b41"
+set -g pane-border-bg default
+set -g pane-border-fg "#373b41"
+
+set -g clock-mode-colour "#81a2be"
+set -g clock-mode-style 24
+
+set -g message-bg "#8abeb7"
+set -g message-fg "#000000"
+
+set -g message-command-bg "#8abeb7"
+set -g message-command-fg "#000000"
+
+# message bar or "prompt"
+set -g message-bg "#2d2d2d"
+set -g message-fg "#cc99cc"
+
+set -g mode-bg "#1d1f21"
+set -g mode-fg "#de935f"
+
+# right side of status bar holds "[host name] (date time)"
+set -g status-right-length 100
+set -g status-right-fg black
+set -g status-right-attr bold
+set -g status-right '#[fg=#f99157,bg=#2d2d2d] %H:%M |#[fg=#6699cc] %y.%m.%d '
+
+# make background window look like white tab
+set-window-option -g window-status-bg default
+set-window-option -g window-status-fg white
+set-window-option -g window-status-attr none
+set-window-option -g window-status-format '#{?window_activity_flag,#[bg=colour105]#[fg=colour0],#[fg=#6699cc]#[bg=colour235]} #I #{?window_activity_flag,#[fg=#999999]#[bg=#2d2d2d],#[fg=#999999]#[bg=#2d2d2d]} #W #[default]'
+
+# make foreground window look like bold yellow foreground tab
+set-window-option -g window-status-current-attr none
+set-window-option -g window-status-current-format '#[fg=#f99157,bg=#2d2d2d] #I #[fg=#cccccc,bg=#393939] #W #[default]'
+
+# active terminal yellow border, non-active white
+set -g pane-border-bg default
+set -g pane-border-fg "#999999"
+set -g pane-active-border-fg "#f99157"
 
 ########
 #  TPM  #
