--- a/kitty.conf
+++ b/kitty.conf
@@ -1,13 +1,13 @@
-font_family                Iosevka
-italic_font                Iosevka Medium Italic
-bold_font                  Iosevka Bold
-bold_italic_font           Iosevka Bold Italic
+font_family                Inconsolata
+italic_font                Inconsolata
+bold_font                  Inconsolata
+bold_italic_font           Inconsolata
 
 font_size                  15
+adjust_line_height         4
 
-###                        Colors
-
-cursor                     #20bbfc
+### Colors
+cursor                     #4275f4
 cursor_shape               block
 cursor_blink_interval      0.5
 cursor_stop_blinking_after 15.0
@@ -15,56 +15,22 @@ cursor_stop_blinking_after 15.0
 url_color                  #0087BD
 url_style                  curly
 
-background                 #1d1f21
-foreground                 #c5c8c6
-
-active_tab_foreground #000
-active_tab_background #eee
-active_tab_font_style bold-italic
-inactive_tab_foreground #444
-inactive_tab_background #999
-inactive_tab_font_style normal
-inactive_text_alpha 1.0
-
-background_opacity 1.0
-
-selection_foreground #000000
-selection_background #FFFACD
+active_tab_font_style      bold-italic
+inactive_tab_font_style    normal
+inactive_text_alpha        1.0
+background_opacity         1.0
 
 # Add some padding
-window_padding_width 5.0
+window_padding_width       5.0
 
-# black
-color0   #1d1f21
-color8   #333333
+# Colors again
+background                 #2B2E32
+foreground                 #B0B7B3
 
-# red
-color1   #cc6666
-color9   #f2777a
-
-# green
-color2   #b5bd68
-color10  #99cc99
-
-# yellow
-color3   #f0c674
-color11  #ffcc66
-
-# blue
-color4  #81a2be
-color12 #6699cc
-
-# magenta
-color5   #b294bb
-color13  #cc99cc
-
-# cyan
-color6   #8abeb7
-color14  #66cccc
-
-# white
-color7   #c5c8c6
-color15  #dddddd
+selection_background #4d4d4c
+selection_foreground #ffffff
+url_color #969896
+cursor #4d4d4c
 
 # Term
 term xterm-kitty
