--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,7 +60,7 @@ bind C-p paste-buffer
 
 # window splitting
 unbind %
-bind l split-window -h
+bind l split-window -h -c "#{pane_current_path}"
 unbind '"'
 bind j split-window -v -c "#{pane_current_path}"
 
@@ -97,62 +97,22 @@ set -g visual-activity on
 # Autorename sanely
 setw -g automatic-rename on
 
-# Status Bar
-set -g status-bg default
-setw -g window-status-current-bg "#282a2e"
-setw -g window-status-current-fg "#81a2be"
+# Statusbar
+set -g status on
+set -g status-bg black
+set -g status-fg white
 
-## highlight active window
-setw -g window-style 'bg=#282a2e'
-setw -g window-active-style 'bg=#1d1f21'
-setw -g pane-active-border-style ''
+set -g status-left-attr bold
+set -g status-left ''
+set -g status-right ''
+set -g status-justify left
 
-## highlight activity in status bar
-setw -g window-status-activity-fg "#8abeb7"
-setw -g window-status-activity-bg "#1d1f21"
+set-window-option -g window-status-format '#[fg=colour,bg=colour255] #I. #W '
 
-## pane border and colors
-set -g pane-active-border-bg default
-set -g pane-active-border-fg "#373b41"
-set -g pane-border-bg default
-set -g pane-border-fg "#373b41"
+set-window-option -g window-status-current-attr bold
+set-window-option -g window-status-current-format '#[fg=black,bg=colour214] #I. #W '
 
-set -g clock-mode-colour "#81a2be"
-set -g clock-mode-style 24
-
-set -g message-bg "#8abeb7"
-set -g message-fg "#000000"
-
-set -g message-command-bg "#8abeb7"
-set -g message-command-fg "#000000"
-
-# message bar or "prompt"
-set -g message-bg "#2d2d2d"
-set -g message-fg "#cc99cc"
-
-set -g mode-bg "#1d1f21"
-set -g mode-fg "#de935f"
-
-# right side of status bar holds "[host name] (date time)"
-set -g status-right-length 100
-set -g status-right-fg black
-set -g status-right-attr bold
-set -g status-right '#[fg=#f99157,bg=#2d2d2d] %H:%M |#[fg=#6699cc] %y.%m.%d '
-
-# make background window look like white tab
-set-window-option -g window-status-bg default
-set-window-option -g window-status-fg white
-set-window-option -g window-status-attr none
-set-window-option -g window-status-format '#{?window_activity_flag,#[bg=colour105]#[fg=colour0],#[fg=#6699cc]#[bg=colour235]} #I #{?window_activity_flag,#[fg=#999999]#[bg=#2d2d2d],#[fg=#999999]#[bg=#2d2d2d]} #W #[default]'
-
-# make foreground window look like bold yellow foreground tab
-set-window-option -g window-status-current-attr none
-set-window-option -g window-status-current-format '#[fg=#f99157,bg=#2d2d2d] #I #[fg=#cccccc,bg=#393939] #W #[default]'
-
-# active terminal yellow border, non-active white
-set -g pane-border-bg default
-set -g pane-border-fg "#999999"
-set -g pane-active-border-fg "#f99157"
+set-window-option -g window-status-activity-attr bold
 
 ########
 #  TPM  #
@@ -160,6 +120,7 @@ set -g pane-active-border-fg "#f99157"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
