--- a/.tmux.conf
+++ b/.tmux.conf
@@ -99,20 +99,12 @@ setw -g automatic-rename on
 
 # Statusbar
 set -g status on
-set -g status-bg black
-set -g status-fg white
 
-set -g status-left-attr bold
-set -g status-left ''
-set -g status-right ''
-set -g status-justify left
-
-set-window-option -g window-status-format '#[fg=colour,bg=colour255] #I. #W '
-
-set-window-option -g window-status-current-attr bold
-set-window-option -g window-status-current-format '#[fg=black,bg=colour214] #I. #W '
-
-set-window-option -g window-status-activity-attr bold
+set-option -g status-style 'bg=#373b41,fg=white,bold'
+set-option -g status-left-length 40
+set-option -g status-left '#[fg=yellow,bold]#S λ '
+set-option -g status-right "#[fg=yellow,bold]$USER@#h #[fg=magenta]%l:%M %p"
+set-option -g status-interval 60
 
 ########
 #  TPM  #
