--- a/kitty.conf
+++ b/kitty.conf
@@ -1,16 +1,15 @@
-font_family                Inconsolata
-italic_font                Inconsolata
-bold_font                  Inconsolata
-bold_italic_font           Inconsolata
+font_family         SF Mono
+# bold_font           Hasklig Bold
+# italic_font         Hasklig Italic
+# bold_italic_font    Hasklig Bold Italic
 
-font_size                  15
-adjust_line_height         4
+font_size           11
+adjust_line_height  5
+adjust_column_width -1
 
 ### Colors
 cursor                     #4275f4
 cursor_shape               block
-cursor_blink_interval      0.5
-cursor_stop_blinking_after 15.0
 
 url_color                  #0087BD
 url_style                  curly
@@ -24,13 +23,12 @@ background_opacity         1.0
 window_padding_width       5.0
 
 # Colors again
-background                 #2B2E32
-foreground                 #B0B7B3
+background           #282c34
+foreground           #abb2bf
 
 selection_background #4d4d4c
 selection_foreground #ffffff
-url_color #969896
-cursor #4d4d4c
+url_color            #969896
 
 # Term
 term xterm-kitty
@@ -39,7 +37,57 @@ term xterm-kitty
 shell zsh --login
 
 # Don't need titlebar
-macos_hide_titlebar yes
+# macos_hide_titlebar yes
+macos_titlebar_color background
 
 # editor
 editor vim
+
+map super+w        close_window
+map super+v        paste_from_clipboard
+map super+c        copy_to_clipboard
+map super+n        new_os_window
+map super+t        new_tab
+map super+i        next_layout
+map super+[        previous_tab
+map super+]        next_tab
+map super+e        kitty_shell window
+map super+shift+h  show_scrollback
+
+tab_separator " | "
+active_tab_background #f1f1f1
+inactive_tab_background #f1f1f1
+
+# One Dark
+
+# black
+color0   #282c34
+color8   #282c34
+
+# red
+color1   #e06c75
+color9   #e06c75
+
+# green
+color2   #98c379
+color10  #98c379
+
+# yellow
+color3   #c8ae9d
+color11  #c8ae9d
+
+# blue
+color4  #61afef
+color12 #61afef
+
+# magenta
+color5   #dd672c
+color13  #dd672c
+
+# cyan
+color6   #56b6c2
+color14  #56b6c2
+
+# white
+color7   #dcdfe4
+color15  #dcdfe4
