--- a/kitty.conf
+++ b/kitty.conf
@@ -1,23 +1,20 @@
-font_family         SF Mono
-# bold_font           Hasklig Bold
-# italic_font         Hasklig Italic
-# bold_italic_font    Hasklig Bold Italic
+font_family        PragmataPro Mono Liga
+font_family_italic PragmataPro Mono Liga
 
-font_size           11
-adjust_line_height  5
-adjust_column_width -1
+font_size           14
+adjust_line_height  6
 
 ### Colors
-cursor                     #4275f4
-cursor_shape               block
+cursor       #4275f4
+cursor_shape block
 
-url_color                  #0087BD
-url_style                  curly
+url_color #0087BD
+url_style curly
 
-active_tab_font_style      bold-italic
-inactive_tab_font_style    normal
-inactive_text_alpha        1.0
-background_opacity         1.0
+active_tab_font_style   bold-italic
+inactive_tab_font_style normal
+inactive_text_alpha     1.0
+background_opacity      1.0
 
 # Add some padding
 window_padding_width       5.0
@@ -37,7 +34,7 @@ term xterm-kitty
 shell zsh --login
 
 # Don't need titlebar
-# macos_hide_titlebar yes
+macos_hide_titlebar yes
 macos_titlebar_color background
 
 # editor
