--- a/.tmux.conf
+++ b/.tmux.conf
@@ -100,11 +100,20 @@ setw -g automatic-rename on
 # Statusbar
 set -g status on
 
-set-option -g status-style 'bg=#373b41,fg=white,bold'
+set-option -g status-position bottom
+set-option -g status-style 'bg=black,fg=white'
 set-option -g status-left-length 40
-set-option -g status-left '#[fg=yellow,bold]#S λ '
-set-option -g status-right "#[fg=yellow,bold]$USER@#h #[fg=magenta]%l:%M %p"
+set-option -g status-left '#[fg=yellow] λ '
+
+set -g status-right-length 100
+set -g status-right '%v'
 set-option -g status-interval 60
+
+set-window-option -g window-status-current-bg yellow
+set-window-option -g window-status-current-fg black
+
+set-window-option -g window-status-activity-bg blue
+set-window-option -g window-status-activity-fg black
 
 ########
 #  TPM  #
