--- a/kitty.conf
+++ b/kitty.conf
@@ -1,31 +1,23 @@
-font_family        PragmataPro Mono Liga
-font_family_italic PragmataPro Mono Liga
+font_family PragmataPro Mono Liga
+bold_font Essential PragmataPro Bold
 
-font_size           14
-adjust_line_height  6
+font_size 14
+adjust_line_height  5
 
 ### Colors
-cursor       #4275f4
+cursor #61afef
 cursor_shape block
 
-url_color #0087BD
+url_color #61afef
 url_style curly
 
-active_tab_font_style   bold-italic
+active_tab_font_style bold
 inactive_tab_font_style normal
-inactive_text_alpha     1.0
-background_opacity      1.0
+inactive_text_alpha 1.0
+background_opacity 1.0
 
 # Add some padding
-window_padding_width       5.0
-
-# Colors again
-background           #282c34
-foreground           #abb2bf
-
-selection_background #4d4d4c
-selection_foreground #ffffff
-url_color            #969896
+window_padding_width 5.0
 
 # Term
 term xterm-kitty
@@ -33,29 +25,28 @@ term xterm-kitty
 # Shell
 shell zsh --login
 
-# Don't need titlebar
-macos_hide_titlebar yes
+# Same color as the background
 macos_titlebar_color background
 
-# editor
-editor vim
+# editor defaults to the $EDITOR value
+editor .
 
-map super+w        close_window
-map super+v        paste_from_clipboard
-map super+c        copy_to_clipboard
-map super+n        new_os_window
-map super+t        new_tab
-map super+i        next_layout
-map super+[        previous_tab
-map super+]        next_tab
-map super+e        kitty_shell window
-map super+shift+h  show_scrollback
+# Some common commands
+map super+w close_window
+map super+v paste_from_clipboard
+map super+c copy_to_clipboard
+map super+n new_os_window
 
-tab_separator " | "
-active_tab_background #f1f1f1
-inactive_tab_background #f1f1f1
+active_tab_background #282c34
+inactive_tab_background #282c34
 
-# One Dark
+# two-firewatch for kitty
+background #282c34
+foreground #dcdfe4
+
+url_color #e5c07b
+selection_background #4e5c07
+selection_foreground #ffffff
 
 # black
 color0   #282c34
@@ -70,16 +61,16 @@ color2   #98c379
 color10  #98c379
 
 # yellow
-color3   #c8ae9d
-color11  #c8ae9d
+color3   #e5c07b
+color11  #e5c07b
 
 # blue
 color4  #61afef
 color12 #61afef
 
 # magenta
-color5   #dd672c
-color13  #dd672c
+color5   #c678dd
+color13  #c678dd
 
 # cyan
 color6   #56b6c2
