--- a/.tmux.conf
+++ b/.tmux.conf
@@ -97,23 +97,11 @@ set -g visual-activity on
 # Autorename sanely
 setw -g automatic-rename on
 
-# Statusbar
-set -g status on
+# Make sure neovim can autoreload
+set -g focus-events on
 
-set-option -g status-position bottom
-set-option -g status-style 'bg=black,fg=white'
-set-option -g status-left-length 40
-set-option -g status-left '#[fg=yellow] λ '
-
-set -g status-right-length 100
-set -g status-right '%v'
-set-option -g status-interval 60
-
-set-window-option -g window-status-current-bg yellow
-set-window-option -g window-status-current-fg black
-
-set-window-option -g window-status-activity-bg blue
-set-window-option -g window-status-activity-fg black
+# Colors
+source-file ~/.tmux/status.conf
 
 ########
 #  TPM  #
