--- a/.tmux.conf
+++ b/.tmux.conf
@@ -101,7 +101,7 @@ setw -g automatic-rename on
 set -g focus-events on
 
 # Colors
-source-file ~/.tmux/status.conf
+source-file ~/dotfiles/.tmux/status.conf
 
 ########
 #  TPM  #
