--- a/.tmux/status.conf
+++ b/.tmux/status.conf
@@ -8,5 +8,11 @@ set-option -g status-right "#[fg=#c8ae9d]%l:%M %p"
 set-option -g status-interval 60
 
 set-window-option -g window-status-current-attr bold
+
+set-window-option -g window-status-format ' #[fg=#888888]#I #[fg=colour7]#W'
+set-window-option -g window-status-current-format ' #W '
+
 set-window-option -g window-status-current-fg "#6e88a6"
 set-window-option -g window-status-current-bg "#282c34"
+
+setw -g monitor-activity off
