--- a/.tmux.conf
+++ b/.tmux.conf
@@ -100,9 +100,6 @@ setw -g automatic-rename on
 # Make sure neovim can autoreload
 set -g focus-events on
 
-# Colors
-source-file ~/dotfiles/.tmux/status.conf
-
 ########
 #  TPM  #
 #########
@@ -110,6 +107,9 @@ source-file ~/dotfiles/.tmux/status.conf
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'arcticicestudio/nord-tmux'
+
+source-file ~/dotfiles/.tmux/status.conf
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
