--- a/.tmux/status.conf
+++ b/.tmux/status.conf
@@ -1,18 +1,11 @@
-# Statusbar
-set -g status on
+set -g status-left "#[fg=blue,bg=black,bold] #{b:pane_current_path} "
+set -g status-right "#{prefix_highlight} #[fg=green,bg=black] %H:%M"
 
-set-option -g status-style 'bg=#282c34,fg=white'
-set-option -g status-left-length 40
-set-option -g status-left '#[fg=#c8ae9d,bold]#S λ '
-set-option -g status-right "#[fg=#c8ae9d]%l:%M %p"
-set-option -g status-interval 60
-
-set-window-option -g window-status-current-attr bold
-
-set-window-option -g window-status-format ' #[fg=#888888]#I #[fg=colour7]#W'
-set-window-option -g window-status-current-format ' #W '
-
-set-window-option -g window-status-current-fg "#6e88a6"
-set-window-option -g window-status-current-bg "#282c34"
+set -g window-status-format " #[fg=white,bg=black] #I #[fg=white,bg=black]#W #F"
+set -g window-status-current-format " #[fg=white,bg=brightblack]#[fg=white,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#W#F "
+set -g window-status-separator ""
 
 setw -g monitor-activity off
+
+set -g @nord_tmux_show_status_content "0"
+set -g @nord_tmux_no_patched_font "1"
