--- a/kitty.conf
+++ b/kitty.conf
@@ -2,10 +2,10 @@ font_family PragmataPro Mono Liga
 bold_font Essential PragmataPro Bold
 
 font_size 14
-adjust_line_height  5
+adjust_line_height  4
+adjust_column_width 0
 
 ### Colors
-cursor #61afef
 cursor_shape block
 
 url_color #61afef
@@ -18,7 +18,6 @@ background_opacity 1.0
 
 # Add some padding
 window_padding_width 1.0
-macos_titlebar_color background
 
 # Term
 term xterm-kitty
@@ -26,8 +25,12 @@ term xterm-kitty
 # Shell
 shell zsh --login
 
+# Same color as the background
+macos_titlebar_color background
+macos_option_as_alt yes
+
 # editor defaults to the $EDITOR value
-editor .
+editor /usr/local/bin/nvim
 
 # Some common commands
 map super+w close_window
@@ -35,42 +38,51 @@ map super+v paste_from_clipboard
 map super+c copy_to_clipboard
 map super+n new_os_window
 
-# two-firewatch for kitty
-background #282c34
-foreground #dcdfe4
+active_tab_background #282c34
+inactive_tab_background #282c34
 
 url_color #e5c07b
-selection_background #4e5c07
-selection_foreground #ffffff
+
+# Nord Colorscheme for Kitty
+# Based on:
+# - https://gist.github.com/marcusramberg/64010234c95a93d953e8c79fdaf94192
+# - https://github.com/arcticicestudio/nord-hyper
+
+foreground            #D8DEE9
+background            #2E3440
+selection_foreground  #000000
+selection_background  #FFFACD
+url_color             #0087BD
+cursor                #81A1C1
 
 # black
-color0   #282c34
-color8   #282c34
+color0   #3B4252
+color8   #4C566A
 
 # red
-color1   #e06c75
-color9   #e06c75
+color1   #BF616A
+color9   #BF616A
 
 # green
-color2   #98c379
-color10  #98c379
+color2   #A3BE8C
+color10  #A3BE8C
 
 # yellow
-color3   #e5c07b
-color11  #e5c07b
+color3   #EBCB8B
+color11  #EBCB8B
 
 # blue
-color4  #61afef
-color12 #61afef
+color4  #81A1C1
+color12 #81A1C1
 
 # magenta
-color5   #c678dd
-color13  #c678dd
+color5   #B48EAD
+color13  #B48EAD
 
 # cyan
-color6   #56b6c2
-color14  #56b6c2
+color6   #88C0D0
+color14  #8FBCBB
 
 # white
-color7   #dcdfe4
-color15  #dcdfe4
+color7   #E5E9F0
+color15  #B48EAD
