--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
   name = Swastik Agarwal
-  email = swastik@enlist.io
+  email = 1569205+swastik@users.noreply.github.com
 [core]
   editor = "vim"
 [difftool]
