--- a/kitty.conf
+++ b/kitty.conf
@@ -1,9 +1,9 @@
 font_family PragmataPro Mono Liga
-bold_font Essential PragmataPro Bold
+bold_font Essential PragmataPro
 
-font_size 14
-adjust_line_height  4
-adjust_column_width 0
+font_size 15
+adjust_line_height 5
+/* adjust_column_width 0 */
 
 ### Colors
 cursor_shape block
@@ -43,46 +43,25 @@ inactive_tab_background #282c34
 
 url_color #e5c07b
 
-# Nord Colorscheme for Kitty
-# Based on:
-# - https://gist.github.com/marcusramberg/64010234c95a93d953e8c79fdaf94192
-# - https://github.com/arcticicestudio/nord-hyper
+background            #202020
+foreground            #f0f0f0
+cursor                #a79c14
+selection_background  #b6d6fc
+color0                #202020
+color8                #414141
+color1                #c30670
+color9                #fb0079
+color2                #10a778
+color10               #5ed6ae
+color3                #a79c14
+color11               #f3e42f
+color4                #008ec4
+color12               #20bafb
+color5                #523b78
+color13               #6854de
+color6                #20a4b9
+color14               #4fb8cc
+color7                #d9d9d9
+color15               #f0f0f0
 
-foreground            #D8DEE9
-background            #2E3440
-selection_foreground  #000000
-selection_background  #FFFACD
-url_color             #0087BD
-cursor                #81A1C1
-
-# black
-color0   #3B4252
-color8   #4C566A
-
-# red
-color1   #BF616A
-color9   #BF616A
-
-# green
-color2   #A3BE8C
-color10  #A3BE8C
-
-# yellow
-color3   #EBCB8B
-color11  #EBCB8B
-
-# blue
-color4  #81A1C1
-color12 #81A1C1
-
-# magenta
-color5   #B48EAD
-color13  #B48EAD
-
-# cyan
-color6   #88C0D0
-color14  #8FBCBB
-
-# white
-color7   #E5E9F0
-color15  #B48EAD
+selection_foreground #202020
