--- a/.zpreztorc
+++ b/.zpreztorc
@@ -15,6 +15,7 @@ zstyle ':prezto:load' pmodule \
   'spectrum' \
   'utility' \
   'completion' \
+  'contrib-prompt' \
   'prompt' \
   'git'
 
@@ -44,7 +45,7 @@ zstyle ':prezto:module:history-substring-search:color' not-found ''
 zstyle ':prezto:module:history-substring-search' globbing-flags ''
 
 # Set the prompt theme to load.
-zstyle ':prezto:module:prompt' theme 'cloud' → gray gray
+zstyle ':prezto:module:prompt' theme 'lean'
 
 # Set the working directory prompt display length.
 zstyle ':prezto:module:prompt' pwd-length 'short'
