--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,3 @@
-###########################
-#  Configuration
-###########################
-
 # use 256 term for pretty colors
 set -g default-terminal "xterm-256color"
 
@@ -101,15 +97,12 @@ setw -g automatic-rename on
 set -g focus-events on
 
 ########
-#  TPM  #
-#########
+# TPM  #
+########
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'arcticicestudio/nord-tmux'
 
-source-file ~/dotfiles/.tmux/status.conf
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+source ~/dotfiles/tmux-status.conf
 run '~/.tmux/plugins/tpm/tpm'
