--- a/kitty.conf
+++ b/kitty.conf
@@ -1,12 +1,12 @@
 font_family PragmataPro Mono Liga
-bold_font Essential PragmataPro
 
-font_size 15
+font_size 15.0
 adjust_line_height 5
-/* adjust_column_width 0 */
 
 ### Colors
 cursor_shape block
+cursor_blink_interval 0
+cursor #888888
 
 url_color #61afef
 url_style curly
@@ -38,11 +38,13 @@ map super+v paste_from_clipboard
 map super+c copy_to_clipboard
 map super+n new_os_window
 
-active_tab_background #282c34
+# Colors
+active_tab_background   #282c34
 inactive_tab_background #282c34
 
 url_color #e5c07b
 
+# ~Plain
 background            #202020
 foreground            #f0f0f0
 cursor                #a79c14
