--- a/kitty.conf
+++ b/kitty.conf
@@ -44,26 +44,24 @@ inactive_tab_background #282c34
 
 url_color #e5c07b
 
-# ~Plain
-background            #202020
-foreground            #f0f0f0
-cursor                #a79c14
-selection_background  #b6d6fc
-color0                #202020
-color8                #414141
-color1                #c30670
-color9                #fb0079
-color2                #10a778
-color10               #5ed6ae
-color3                #a79c14
-color11               #f3e42f
-color4                #008ec4
-color12               #20bafb
-color5                #523b78
-color13               #6854de
-color6                #20a4b9
-color14               #4fb8cc
-color7                #d9d9d9
-color15               #f0f0f0
+# theme: min
+# colors picked to match the vim theme
+foreground #b4c0c5
+background #151513
 
-selection_foreground #202020
+color0 #151513
+color1 #bf4a40
+color2 #52896f
+color3 #bfbf60
+color4 #4080bf
+color5 #d89cde
+color6 #369fa1
+color7 #99a5b1
+color8 #363c44
+color9 #ff1500
+color10 #00db6e
+color11 #e9e935
+color12 #0080ff
+color13 #f183e8
+color14 #15b3c1
+color15 #ffffff
